# CandyCrisis

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
assets/: CandyCrisisLevels.txt
cmake/: CopyCandyCrisisResources.cmake  CopyLevelPackagesToDist.cmake  PackageCandyCrisisWeb.cmake
game/: CandyCrisis.html  CandyCrisis.js  CandyCrisis.wasm  audio.js  index.html  manifest.json  pkg_level_0.data  pkg_level_0.js  pkg_level_1.data  pkg_level_1.js  pkg_level_10.data  pkg_level_10.js  pkg_level_11.data  pkg_level_11.js  pkg_level_13.js  pkg_level_2.data  pkg_level_2.js  pkg_level_3.data  pkg_level_3.js  pkg_level_4.data  pkg_level_4.js  pkg_level_5.data  pkg_level_5.js  pkg_level_6.data  pkg_level_6.js  pkg_level_7.data  pkg_level_7.js  pkg_level_8.data  pkg_level_8.js  pkg_level_9.data  pkg_level_9.js  pkg_shared.data  pkg_shared.js  pkg_world1.js  pkg_world2.data  pkg_world2.js  pkg_world2_shared.data  pkg_world2_shared.js  pkg_world3.js  wrangler.jsonc
src/: .clangd  Globals.cpp  Globals.h  Input.h  Input_Emscripten.cpp  Input_SDL.cpp  MTypes.cpp  MTypes.h  Platform.h  Platform_Emscripten.cpp  Platform_SDL.cpp  SDLU.cpp  SDLU.h  UI_GameOverScreen.cpp  UI_GameOverScreen.h  UI_HighScoreScreen.cpp  UI_HighScoreScreen.h  UI_PuppetShow.cpp  UI_PuppetShow.h  UI_PuppetShowData.h  UI_TitleScreen.cpp  UI_TitleScreen.h  UI_VictoryScreen.cpp  UI_VictoryScreen.h  UI_WorldSelectScreen.cpp  UI_WorldSelectScreen.h  blitter.cpp  blitter.h  control.cpp  font.cpp  font.h  gameticks.cpp  graphics.cpp  graphics.h  graymonitor.cpp  graymonitor.h  grays.cpp  grays.h  gworld.cpp  gworld.h  (+34 more)
web/: shell.html
